# cmake-cuda

./: CMakeLists.txt  README.md  cuda_stuff.cu  main.cpp
